--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-requests==1.2.3
-grequests==0.2.0
-progressbar-latest==2.3
-Unidecode==0.04.11
-click==3.3
-python-dateutil==2.1
+blist==1.3.4
+click==6.4
+gevent==1.1.0
+greenlet==0.4.9
+grequests==0.3.0
+progressbar-latest==2.4
+python-dateutil==2.5.2
+requests==2.9.1
+six==1.10.0
+Unidecode==0.4.19
