--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,10 @@ workflows:
   version: 2
   workflow:
     jobs:
-      - test-2.7
-      - test-3.5
-      - test-3.6
+      - test-3.7
+      - test-3.8
+      - test-3.9
+      - test-3.10
 
 defaults: &defaults
   working_directory: ~/code
@@ -14,21 +15,25 @@ defaults: &defaults
   - checkout
   - run:
       name: Install dependencies
-      command: sudo pip install -r requirements.txt
+      command: pip install -r requirements.txt
   - run:
       name: Test
       command: pytest
 
 jobs:
-  test-2.7:
+  test-3.7:
     <<: *defaults
     docker:
-    - image: circleci/python:2.7
-  test-3.5:
+    - image: cimg/python:3.7
+  test-3.8:
     <<: *defaults
     docker:
-    - image: circleci/python:3.5
-  test-3.6:
+    - image: cimg/python:3.8
+  test-3.9:
     <<: *defaults
     docker:
-    - image: circleci/python:3.6
+    - image: cimg/python:3.9
+  test-3.10:
+    <<: *defaults
+    docker:
+    - image: cimg/python:3.10
