Add code coverage reporting

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,13 @@
 [tool:pytest]
 testpaths=tests
+addopts = --cov closeio_api --cov-config=setup.cfg --cov-report=html --cov-report=xml --cov-report=term --junitxml=.reports/unit.xml
+
+[coverage:run]
+branch = True
+data_file = .reports/.coverage
+
+[coverage:html]
+directory = .reports/htmlcov
+
+[coverage:xml]
+output = .reports/coverage.xml
